Update the bug fixes on 0.13b FatFS

clockps_v1_0:
First release of clocksPS drivers.
Fix Doxygen and coverity reported issues.

lwip202_v1_2:
Add mcdma support and handle IEEE_1588 for AXI Phy in ethernet header.
Add AXI 2.5G Ethernet support.
Fix axiethernet apps build error by removing dependency on HSI get_connected_intr_cntrl API output.
Fix copyrights.

mcdma_v1_2:
Add API XMcdma_LookupConfigBaseAddr() to lookup config by base address.
Add XMcdma_BdSetSwId() and XMcdma_BdGetSwId() macro to access SW ID field in BD.
Export XMcdma_BdChainFree() and XMcDma_BdSetAppWord() APIS to use from LwIP contrib source.
Read num channels from IP configuration.
Fix gcc warning.
Remove unused define for buffer length mask(XMCDMA_BD_LEN_MASK).
Fix typos and rephrase comment description.
Read buffer length register width from IP config.
In driver tcl update get_cells API to support hierarchical designs.

cpu_v2_8:
Added Os and LTO settings in extra compiler flags for PMU BSP

iicps_v3_8:
Fix for Cppcheck and Doxygen warnings.
Add timeout interrupt in master mode.

intc_v3_8:
Updated check_cascade proc, to add check
for irq_in pin.It fixes CR#1005371

qspips_v3_5:
Fixed compilation warnings for ARMCC.
Added support for the low density ISSI flash parts.

qspipsu_v1_8:
Added support for IS25LP064 and IS25WP064.
Added an example for accessing 64bit dma within 32 bit application.(CR#1004701)
Removed checkpatch warnings for xqspipsu.c and xqspipsu.h
Removed the mentions of Spansion flash from BlockErase API. (CR#1006247)
Fixed cppcheck, doxygen and gcc warnings. (CR#1006336)
Setup64BRxDma() should be called if the RxAddress is greater than 32 bit address space. (CR#1006862)
Added support for low density ISSI flash parts
Fixed the code in XQspiPsu_GenFifoEntryData() for data transfer length up to 255 for reducing the extra loop.

rfdc_v5_0:
Update DAC min sampling rate to 500MHz and also update VCO Range, PLL_DIVIDER and PLL_FPDIV ranges.