@@ -1,6 +1,6 @@
 /******************************************************************************
 *
-* Copyright (C) 2009 - 2017 Xilinx, Inc.  All rights reserved.
+* Copyright (C) 2009 - 2018 Xilinx, Inc.  All rights reserved.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
@@ -138,7 +138,10 @@ int main()
 
 /* Define this board specific macro in order perform PHY reset on ZCU102 */
 #ifdef XPS_BOARD_ZCU102
-	IicPhyReset();
+	if(IicPhyReset()) {
+		xil_printf("Error performing PHY reset \n\r");
+		return -1;
+	}
 #endif
 
 	init_platform();
