@@ -49,6 +49,9 @@ Add AXI 2.5G Ethernet support.
 Fix axiethernet apps build error by removing dependency on HSI get_connected_intr_cntrl API output.
 Fix copyrights.
 
+lwip_echo_server:
+Fix warning in iic phy reset in lwip echo server.
+
 mcdma_v1_2:
 Add API XMcdma_LookupConfigBaseAddr() to lookup config by base address.
 Add XMcdma_BdSetSwId() and XMcdma_BdGetSwId() macro to access SW ID field in BD.
